@@ -7,6 +7,6 @@ import java.util.Map;
 public record GXConditionSegment(String sql, Map<String, Object> params) {
     public GXConditionSegment(String sql, Map<String, Object> params) {
         this.sql = sql;
-        this.params = params == null ? Collections.emptyMap() : Collections.unmodifiableMap(new HashMap<>(params));
+        this.params = params == null ? Collections.emptyMap() : Map.copyOf(params);
     }
 }
